# catdoc

./: CMakeLists.txt  README
src/: analyze.c  catdoc.c  catdoc.h  catppt.c  charsets.c  charsets_bin.c  confutil.c  fileutil.c  mstream.h  ole.c  ppt.h  pptparse.c  ppttypes.h  reader.c  rtfread.c  sheet.c  substmap.c  writer.c  xls.h  xls2csv.c  xlsparse.c  xltypes.h
